--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,12 @@
             android:text="Tienda" />
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/carrito"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Carrito" />
+
+        <com.google.android.material.tabs.TabItem
             android:id="@+id/pedidos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
