--- a/app/src/main/res/layout/fragment_perfil_fragmento.xml
+++ b/app/src/main/res/layout/fragment_perfil_fragmento.xml
@@ -1,14 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#FAF6F6"
+    android:orientation="vertical"
+    android:paddingTop="30px"
+    android:paddingBottom="100px"
     tools:context=".PerfilFragmento">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100px"
+        android:layout_marginRight="100px"
+        android:text="PERFIL"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="100px"
+        android:paddingBottom="100px"
+        tools:src="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/editTextText"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="100px"
+        android:layout_marginRight="100px"
+        android:layout_marginBottom="100px"
+        android:hint="Nombre de Usuario"
+        android:inputType="text"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+
+    <EditText
+        android:id="@+id/etCPPerfil"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="100px"
+        android:layout_marginRight="100px"
+        android:background="#E7E5E5"
+        android:ems="10"
+        android:hint="CP"
+        android:inputType="number"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+
+    <EditText
+        android:id="@+id/etEmailAddressPerfil"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="100px"
+        android:background="#E7E5E5"
+        android:ems="10"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+
+    <Switch
+        android:id="@+id/switchPerfil"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="100px"
+        android:layout_marginRight="100px"
+        android:layout_weight="1"
+        android:background="#E7E5E5"
+        android:text="Newsletter"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/cerrarSesionPerfil"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="100px"
+        android:text="Cerrar Sesión"
+        android:textColorLink="#FB0E0E" />
+
+</LinearLayout>
