--- a/app/src/main/res/layout/activity_main_login.xml
+++ b/app/src/main/res/layout/activity_main_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:layout_margin="50dp"
     android:orientation="vertical"
-    tools:context=".MainActivityLogin">
+    tools:context=".Interfaces.Login">
 
     <ImageView
         android:id="@+id/ivLogoLogin"
