--- a/app/src/main/res/layout/fragment_carro.xml
+++ b/app/src/main/res/layout/fragment_carro.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Carro">
+    tools:context=".Interfaces.Carro">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
