--- a/app/src/main/res/layout/fragment_tienda.xml
+++ b/app/src/main/res/layout/fragment_tienda.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Tienda" >
+    tools:context=".Interfaces.Tienda" >
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
