--- a/app/src/main/res/layout/fragment_perfil_fragmento.xml
+++ b/app/src/main/res/layout/fragment_perfil_fragmento.xml
@@ -6,16 +6,16 @@
     android:layout_height="wrap_content"
     android:background="#FAF6F6"
     android:orientation="vertical"
-    android:paddingTop="30px"
-    android:paddingBottom="100px"
+    android:paddingTop="30dp"
+    android:paddingBottom="100dp"
     tools:context=".Interfaces.Perfil">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100px"
-        android:layout_marginRight="100px"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
         android:text="PERFIL"
         android:textAlignment="center"
         android:textSize="30sp"
@@ -25,17 +25,16 @@
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="100px"
-        android:paddingBottom="100px"
+        android:layout_margin="50dp"
         tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/editTextText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginLeft="100px"
-        android:layout_marginRight="100px"
-        android:layout_marginBottom="100px"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="25dp"
         android:hint="Nombre de Usuario"
         android:inputType="text"
         android:textAlignment="center"
@@ -45,8 +44,8 @@
         android:id="@+id/etCPPerfil"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginLeft="100px"
-        android:layout_marginRight="100px"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:background="#E7E5E5"
         android:ems="10"
         android:hint="CP"
@@ -58,7 +57,7 @@
         android:id="@+id/etEmailAddressPerfil"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_margin="100px"
+        android:layout_margin="50dp"
         android:background="#E7E5E5"
         android:ems="10"
         android:hint="Email"
@@ -70,8 +69,8 @@
         android:id="@+id/switchPerfil"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginLeft="100px"
-        android:layout_marginRight="100px"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:layout_weight="1"
         android:background="#E7E5E5"
         android:text="Newsletter"
@@ -82,7 +81,7 @@
         android:id="@+id/cerrarSesionPerfil"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="100px"
+        android:layout_margin="50dp"
         android:text="Cerrar Sesión"
         android:textColorLink="#FB0E0E" />
 
