--- a/app/src/main/res/layout/tarjeta_producto_carrito.xml
+++ b/app/src/main/res/layout/tarjeta_producto_carrito.xml
@@ -70,7 +70,7 @@
                         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:enabled="false"
+                        android:enabled="true"
                         android:text="-"
                         android:textSize="18sp" />
 
@@ -92,7 +92,6 @@
                         android:text="+"
                         android:textSize="18sp" />
                 </LinearLayout>
-
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
