--- a/app/src/main/res/layout/activity_main_login.xml
+++ b/app/src/main/res/layout/activity_main_login.xml
@@ -76,6 +76,7 @@
         android:layout_marginTop="100px"
         android:layout_marginRight="100px"
         android:backgroundTint="#3B8121"
+        android:onClick="iniciarSesion"
         android:text="Iniciar Sesión"
         android:textSize="20sp" />
 
