--- a/app/src/main/res/layout/tarjeta_producto_linear.xml
+++ b/app/src/main/res/layout/tarjeta_producto_linear.xml
@@ -12,6 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="127dp"
+        android:background="@drawable/tarjeta_cambio_de_color"
         android:orientation="horizontal">
 
         <ImageView
@@ -32,9 +33,10 @@
                 android:id="@+id/nombreProductoTarjeta2"
                 android:layout_width="match_parent"
                 android:layout_height="81dp"
+                android:layout_marginBottom="-5dp"
                 android:gravity="center_vertical"
                 android:text="TextView"
-                android:textSize="20sp"
+                android:textSize="24sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -42,7 +44,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:gravity="center_vertical"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="20sp" />
         </LinearLayout>
 
     </LinearLayout>
