--- a/app/src/main/res/layout/tarjeta_producto_linear.xml
+++ b/app/src/main/res/layout/tarjeta_producto_linear.xml
@@ -9,11 +9,23 @@
     app:cardCornerRadius="20dp"
     app:cardElevation="20dp">
 
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="28dp"
+        android:layout_height="32dp"
+        android:layout_gravity="bottom|right"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="10dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        android:src="@drawable/mas" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="127dp"
-        android:background="@drawable/tarjeta_cambio_de_color"
         android:orientation="horizontal">
+        <!--android:background="@drawable/tarjeta_cambio_de_color"-->
+
 
         <ImageView
             android:id="@+id/imagenProductoCarrito"
@@ -46,6 +58,7 @@
                 android:gravity="center_vertical"
                 android:text="TextView"
                 android:textSize="20sp" />
+
         </LinearLayout>
 
     </LinearLayout>
