--- a/app/src/main/res/layout/activity_main_login.xml
+++ b/app/src/main/res/layout/activity_main_login.xml
@@ -55,7 +55,7 @@
             android:text="¿No tienes cuenta?"
             android:textAlignment="textStart"
             android:textSize="18sp"
-            android:textStyle="bold" />/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvRegistrateLogin"
@@ -87,5 +87,22 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="30dp"
         android:background="#000000" />
+
+    <!--<Button
+        android:id="@+id/btIniciarSesionGoogle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Iniciar sesión con Google"
+        android:layout_marginTop="16dp"
+        android:padding="12dp"
+        android:textColor="#FFFFFF"/>-->
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/btIniciarSesionGoogle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor ="@android:color/holo_blue_dark"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center"/>
+
 
 </LinearLayout>
