--- a/app/src/main/res/layout/activity_main_login.xml
+++ b/app/src/main/res/layout/activity_main_login.xml
@@ -2,60 +2,73 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="50dp"
+    android:background="#FFFFFF"
+    android:gravity="center"
     android:orientation="vertical"
+    android:padding="40dp"
     tools:context=".Interfaces.Login">
 
+    <!-- Logo -->
     <ImageView
         android:id="@+id/ivLogoLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200px"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="40dp"
+        android:src="@drawable/ic_launcher_foreground"
+        android:background="@android:color/transparent" />
 
+    <!-- Campo de Email -->
     <EditText
         android:id="@+id/etUsuarioLogin"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="200px"
-        android:background="#E7E5E5"
-        android:ems="10"
-        android:hint="Correo"
-        android:inputType="text"
+        android:layout_height="55dp"
+        android:background="#F5F5F5"
+        android:hint="Correo electrónico"
+        android:inputType="textEmailAddress"
         android:textAlignment="center"
-        android:textSize="20sp" />
+        android:textColor="#3C3C3C"
+        android:textColorHint="#888888"
+        android:drawableStart="@android:drawable/ic_dialog_email"
+        android:padding="15dp"
+        android:textSize="18sp"
+        android:elevation="2dp"
+        android:layout_marginBottom="20dp" />
 
+    <!-- Campo de Contraseña -->
     <EditText
         android:id="@+id/etContrasenaLogin"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:background="#E7E5E5"
-        android:ems="10"
+        android:layout_height="55dp"
+        android:background="#F5F5F5"
         android:hint="Contraseña"
         android:inputType="textPassword"
         android:textAlignment="center"
-        android:textSize="20sp" />
+        android:textColor="#3C3C3C"
+        android:textColorHint="#888888"
+        android:drawableStart="@android:drawable/ic_lock_lock"
+        android:padding="15dp"
+        android:textSize="18sp"
+        android:elevation="2dp"
+        android:layout_marginBottom="30dp" />
 
+    <!-- Recordar contraseña y Registro -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="30dp">
 
         <TextView
             android:id="@+id/tvPreguntaLogin"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="signInWithEmail"
             android:text="¿No tienes cuenta?"
-            android:textAlignment="textStart"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textColor="#3C3C3C"
+            android:textSize="16sp"
+            android:textAlignment="textStart" />
 
         <TextView
             android:id="@+id/tvRegistrateLogin"
@@ -63,46 +76,41 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Regístrate"
+            android:textColor="#00B9DC"
+            android:textSize="16sp"
+            android:textStyle="bold"
             android:textAlignment="textEnd"
-            android:textColor="@android:color/holo_blue_dark"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:clickable="true"
+            android:focusable="true" />
     </LinearLayout>
 
+    <!-- Botón Iniciar Sesión -->
     <Button
         android:id="@+id/btIniciarSesionLogin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100px"
-        android:layout_marginTop="100px"
-        android:layout_marginRight="100px"
-        android:backgroundTint="#3B8121"
-        android:text="Iniciar Sesión"
-        android:textSize="20sp" />
+        android:layout_height="60dp"
+        android:backgroundTint="#E60012"
+        android:text="INICIAR SESIÓN"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_marginBottom="20dp"
+        android:elevation="4dp" />
 
+    <!-- Línea Separadora -->
     <View
         android:id="@+id/viewLineaLogin"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="30dp"
-        android:background="#000000" />
+        android:layout_height="2dp"
+        android:background="#3C3C3C"
+        android:layout_marginBottom="30dp" />
 
-    <!--<Button
-        android:id="@+id/btIniciarSesionGoogle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Iniciar sesión con Google"
-        android:layout_marginTop="16dp"
-        android:padding="12dp"
-        android:textColor="#FFFFFF"/>-->
+    <!-- Botón de Google Sign-In -->
     <com.google.android.gms.common.SignInButton
         android:id="@+id/btIniciarSesionGoogle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor ="@android:color/holo_blue_dark"
-        android:layout_marginTop="40dp"
-        android:layout_gravity="center"/>
-
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp" />
 
 </LinearLayout>
