--- a/app/src/main/res/layout/fragment_carro.xml
+++ b/app/src/main/res/layout/fragment_carro.xml
@@ -28,6 +28,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCarrito"
         android:layout_width="match_parent"
-        android:layout_height="858dp" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
