--- a/app/src/main/res/layout/fragment_producto_detallado.xml
+++ b/app/src/main/res/layout/fragment_producto_detallado.xml
@@ -38,66 +38,91 @@
 
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="271dp"
-        android:layout_marginHorizontal="60dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="20dp"
-        app:cardCornerRadius="50dp">
-
-        <ImageView
-            android:id="@+id/ivProductoDetallado"
-            android:layout_width="253dp"
-            android:layout_height="239dp"
-            android:layout_gravity="center"
-            tools:src="@tools:sample/avatars" />
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="395dp"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="40dp"
-        app:cardElevation="350dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="425dp"
-            android:background="#FFFFFF"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tituloProductoDetallado"
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="271dp"
+                android:layout_marginHorizontal="60dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp"
+                app:cardCornerRadius="50dp">
+
+                <ImageView
+                    android:id="@+id/ivProductoDetallado"
+                    android:layout_width="243dp"
+                    android:layout_height="239dp"
+                    android:layout_gravity="center"
+                    tools:src="@tools:sample/avatars" />
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="40dp"
-                android:gravity="center_horizontal"
-                android:text="TextView"
-                android:textColor="#FF2B2B"
-                android:textSize="34sp"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="40dp"
+                app:cardElevation="350dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="425dp"
+                    android:background="#FFFFFF"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tituloProductoDetallado"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="40dp"
+                        android:gravity="center_horizontal"
+                        android:text="TextView"
+                        android:textColor="#FF2B2B"
+                        android:textSize="34sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/descripcionProductoDetallado"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="25dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="TextView"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tvPrecioProductoDetallado"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:layout_margin="10dp"
+                    android:text="TextView"
+                    android:textSize="20sp" />
+
+            </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/btAñadirProductoProductosDetallados"
+                android:layout_width="match_parent"
+                android:layout_height="58dp"
+                android:layout_gravity="bottom"
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginBottom="10dp"
+                android:backgroundTint="#FF4444"
+                android:text="Añadir al carrito"
+                android:textSize="24sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/descripcionProductoDetallado"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="25dp"
-                android:layout_marginBottom="10dp"
-                android:text="TextView"
-                android:textSize="16sp" />
-
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/tvPrecioProductoDetallado"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_margin="10dp"
-            android:text="TextView"
-            android:textSize="20sp" />
-
-    </androidx.cardview.widget.CardView>
+    </ScrollView>
 
 </LinearLayout>
