--- a/app/src/main/res/layout/fragment_producto_detallado.xml
+++ b/app/src/main/res/layout/fragment_producto_detallado.xml
@@ -16,7 +16,7 @@
         app:cardElevation="150dp">
 
         <TextView
-            android:id="@+id/tvCarro"
+            android:id="@+id/tvPedidos"
             android:layout_width="match_parent"
             android:layout_height="59dp"
             android:background="#FF4444"
@@ -52,11 +52,11 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
