--- a/app/src/main/res/layout/fragment_perfil_fragmento.xml
+++ b/app/src/main/res/layout/fragment_perfil_fragmento.xml
@@ -50,7 +50,7 @@
 
     <!-- Campo Código Postal -->
     <EditText
-        android:id="@+id/etCPPerfil"
+        android:id="@+id/etDireccionPerfil"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_marginBottom="20dp"
