--- a/app/src/main/res/layout/fragment_pedidos.xml
+++ b/app/src/main/res/layout/fragment_pedidos.xml
@@ -26,6 +26,7 @@
     </androidx.cardview.widget.CardView>
 
     <SearchView
+        android:id="@+id/buscadorPedidos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
