--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -73,7 +73,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tilEmailRegistro">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etCPRegistro"
+            android:id="@+id/etDireccionRegistro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
