--- a/app/src/main/res/layout/tarjeta_pedidos.xml
+++ b/app/src/main/res/layout/tarjeta_pedidos.xml
@@ -24,7 +24,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="TextView"
-            android:textSize="20sp" />
+            android:textSize="28sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvCodigoPedido"
@@ -51,7 +52,8 @@
                 android:layout_marginLeft="15dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tvPrecioPedido"
@@ -60,7 +62,8 @@
                 android:layout_marginRight="15dp"
                 android:layout_weight="1"
                 android:gravity="right|center_vertical"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="16sp" />
         </LinearLayout>
     </LinearLayout>
 
